Menambah style list type css

--- a/Cara-Membuat-List.html
+++ b/Cara-Membuat-List.html
@@ -6,13 +6,15 @@
 </head>
 <body>
 <!-- Unordered List -->
-<ul>
+<h3>Bahan - Bahan Dasar</h3>
+<ul style="list-style-type:decimal-leading-zero">
 	<li>Tepung</li>
 	<li>Daging Ayam</li>
 	<li>Cabai</li>
 	<li>Minyak</li>
 </ul>
 <!-- Ordered List -->
+<h3>Jenis Rasa Cireng</h3>
 <ol>
 	<li>Cireng Rasa Ayam</li>
 	<li>Cireng Rasa Keju</li>
@@ -20,6 +22,7 @@
 	<li>Cireng Rasa Kangen</li>
 </ol>
 <!-- Description List-->
+<h3>Penjelasan Jenis Cireng</h3>
 <dl>
 	<dt><b>Cireng Rasa Ayam</b></dt>
 	<dd>Cireng Rasa Ayam adalah makanan ringan yang terbuat dari adonan tepung isi ayam</dd>
@@ -29,7 +32,8 @@
 	<dd>Tidak ada cireng rasa kangen, mungkin hanya fikiranmu saja yang telalu memikirkan dia</dd>	
 </dl>
 <!-- Nested List -->
-<ul>
+<h3>Bahan - Bahan Membuat Cireng</h3>
+<ul style="list-style-type:disc">
 	<li>Cireng Rasa Ayam Pedas</li>
 	<ul>
 		<li>Daging Ayam</li>
