memisahkan css dan coba vscode

--- a/Cara-Membuat-List.html
+++ b/Cara-Membuat-List.html
@@ -3,11 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<title>Cara Membuat List</title>
+	<style>
+	.mainlist{
+		list-style-type: decimal-leading-zero;
+		color: rgb(9, 9, 90)
+	}	
+	.main{
+		color:blue
+	}
+	
+	</style>
 </head>
 <body>
 <!-- Unordered List -->
-<h3>Bahan - Bahan Dasar</h3>
-<ul style="list-style-type:decimal-leading-zero">
+<h3 class=main>Bahan - Bahan Dasar</h3>
+<ul class=mainlist>
 	<li>Tepung</li>
 	<li>Daging Ayam</li>
 	<li>Cabai</li>
